# rust-ui

./: .gitignore  Cargo.toml  README.md
crates/audiolearn/: Cargo.toml  Dioxus.toml
crates/audiolearn/assets/: styles.css
crates/audiolearn/doc/: designs.md  tts-integration.md
crates/audiolearn/examples/: tts_demo.rs
crates/audiolearn/src/: lib.rs  main.rs
crates/audiolearn/src-tauri/: Cargo.toml  tauri.conf.json
crates/audiolearn/src-tauri/capabilities/: default.json
crates/audiolearn/src-tauri/src/: commands.rs  lib.rs  main.rs
crates/audiolearn/src/api/: mod.rs  models.rs  services.rs
crates/audiolearn/src/common/: error.rs  mod.rs  types.rs
crates/audiolearn/src/core/: audio_context.rs  audio_test.rs  course_service.rs  edge_tts.rs  mod.rs  native_tts.rs  playback_state.rs  rodio_player.rs  sample_data.rs  search.rs  settings.rs  tts_manager.rs  tts_tests.rs  web_tts.rs
crates/audiolearn/src/facade/: app.rs  components.rs  create_tests.rs  mod.rs  pages.rs
crates/audiolearn/src/spi/: analytics.rs  audio.rs  mod.rs  storage.rs  tts.rs
crates/components/: Cargo.toml
crates/components/src/: alert.rs  avatar.rs  badge.rs  button.rs  card.rs  dropdown.rs  icon.rs  input.rs  lib.rs  modal.rs  progress.rs  select.rs  spinner.rs  table.rs  tabs.rs  toast.rs  tooltip.rs
crates/rustml-core/: Cargo.toml  README.md
crates/rustml-core/src/: error.rs  lib.rs  shape.rs  tensor.rs
crates/rustml-hub/: Cargo.toml
crates/rustml-hub/src/: api.rs  lib.rs  safetensors.rs  weight_mapper.rs
crates/rustml-nlp/: Cargo.toml
crates/rustml-nlp/examples/: gpt2_generate.rs
crates/rustml-nlp/src/: generation.rs  gpt.rs  lib.rs
crates/rustml-nlp/src/tokenizer/: bpe.rs  mod.rs
crates/rustml-nn/: Cargo.toml
crates/rustml-nn/src/: attention.rs  embedding.rs  layer_norm.rs  lib.rs  linear.rs
crates/tutorial-app/: Cargo.toml
crates/tutorial-app/assets/: styles.css
crates/tutorial-app/src/: app.rs  components.rs  data.rs  lib.rs  main.rs  state.rs
doc/: overview.md
doc/0-ideation/: framework-benchmarks.md  wasm-tauri-full-rust.md
doc/3-design/: architecture.md  charts.md  swe-cloud-ui.md  use-cases.md
