[workspace]
resolver = "2"
members = [
    "crates/components",
    "crates/tutorial-app",
    "crates/audiolearn",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sweengineeringlabs/rust-ui"

[workspace.dependencies]
dioxus = { version = "0.6", features = ["web", "desktop"] }
