[workspace]
resolver = "2"
members = [
    "crates/components",
    "crates/tutorial-app",
    "crates/audiolearn",
    "crates/audiolearn/src-tauri",
    "crates/rustml-core",
    "crates/rustml-nn",
    "crates/rustml-hub",
    "crates/rustml-nlp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sweengineeringlabs/rust-ui"

[workspace.dependencies]
dioxus = { version = "0.6", features = ["web", "desktop"] }
