[package]
name = "audiolearn"
version = "0.1.0"
edition = "2024"
description = "Audio-first online course platform - Learn on the go"

[dependencies]
dioxus = { version = "0.6", features = ["web", "desktop"] }
components = { path = "../components" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

# Desktop-only dependencies (native audio/TTS)
rodio = { version = "0.19", features = ["mp3", "wav"], optional = true }
tokio = { version = "1.0", features = ["sync", "time", "rt-multi-thread"], optional = true }
tts = { version = "0.26", optional = true }
msedge-tts = { version = "0.2", optional = true }
rfd = { version = "0.15", optional = true }
dirs = { version = "5.0", optional = true }

# Web-specific dependencies  
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "SpeechSynthesis", 
    "SpeechSynthesisUtterance",
    "SpeechSynthesisVoice"
] }

[features]
default = ["desktop"]
web = ["wasm-bindgen", "web-sys"]
desktop = ["rodio", "tokio", "tts", "msedge-tts", "rfd", "dirs"]
tauri = ["web"]  # Tauri uses web frontend with native Tauri backend

