[package]
name = "components"
version = "0.1.0"
edition = "2024"
description = "UI component library for rust-ui framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sweengineeringlabs/rust-ui"

[dependencies]
dioxus = { version = "0.6", features = ["web", "desktop"] }
uuid = { version = "1.11", features = ["v4"] }
