[package]
name = "rustml-hub"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
description = "HuggingFace Hub integration for loading pre-trained models"

[dependencies]
rustml-core = { path = "../rustml-core" }
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["fs", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
dirs = "6.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
