[package]
name = "rustml-nlp"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
description = "NLP models for RustML including GPT-2 and text generation"

[dependencies]
rustml-core = { path = "../rustml-core" }
rustml-nn = { path = "../rustml-nn" }
rustml-hub = { path = "../rustml-hub" }
thiserror = "2.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "gpt2_generate"
path = "examples/gpt2_generate.rs"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
