[package]
name = "rustml-nn"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Neural network layers for RustML including attention mechanisms"

[dependencies]
rustml-core = { path = "../rustml-core" }
thiserror = "2.0"

[dev-dependencies]
approx = "0.5"
