[package]
name = "tutorial-app"
version = "0.1.0"
edition = "2024"
description = "Gamified tutorial app like Duolingo"

[dependencies]
dioxus = { version = "0.6", features = ["web", "desktop"] }
components = { path = "../components" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["web"]
web = []
desktop = []
