[package]
name = "audiolearn-tauri"
version = "0.1.0"
description = "AudioLearn - Audio-first online course platform"
authors = ["AudioLearn Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "audiolearn_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "audiolearn-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tokio = { version = "1.0", features = ["sync", "time", "rt-multi-thread"] }
thiserror = "1.0"

# TTS dependencies 
tts = "0.26"
msedge-tts = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
